--- a/CAMERA/CAMERA.html
+++ b/CAMERA/CAMERA.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>MY CAMERA</title>
 	<link rel="stylesheet" href="Camera.css">
 </head>
@@ -21,9 +21,9 @@
 	</div>
 	<div id="Border">
 		<div id ="Image">
-			<img src="shubham.jpg">
+			<img src="micky.png">
 		</div>
-		<h1>SHUBHAM SAINI</h1>
+		<h1>HELLO WORLD!</h1>
 	</div>
 </body>
 <script>
