--- a/CALCULATOR/CALCULATER.html
+++ b/CALCULATOR/CALCULATER.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ARTHEMATIC CALCULATER</title>
 	<link rel="stylesheet" type="text/css" href="calculator.css">
 </head>
